--- a/app/src/main/res/layout/activity_wechat_capture.xml
+++ b/app/src/main/res/layout/activity_wechat_capture.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_wechat_capture"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="scan.WeChatCaptureActivity">
+    tools:context=".WeChatCaptureActivity">
 
     <SurfaceView
         android:id="@+id/preview_view"
